<?xml version="1.0"?>
<package format="2">
  <name>vitulus_web</name>
  <version>0.0.1</version>
  <description>Web server for Vitulus robot.</description>

  <maintainer email="robert.lacina@gmail.com">Robert Lacina</maintainer>
  <license>Apache 2.0</license>
  <author email="robert.lacina@gmail.com">Robert Lacina</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>
</package>
